--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@ body {
 
 <body>
 
-    <h1><span style="background-color: rgb(0, 0, 0);">Sound-Space-Index</span></h1>
+    <h1><span style="background-color: rgb(0, 0, 0);">SOUND SPACES</span></h1>
     
     <div class="description">
-        <p>This index is an attempt to loosely explore the relationship between sound and architectural form, exploring the nature of how sound behaves in space, how its produced, and its potential utility.</p>
+        <p>This index is an attempt to loosely explore the relationship between sound and architectural form, exploring the nature of how sound behaves in space, how its produced, and its potential utility. Entries may include subject matter such as interviews, essays, musical compositions, and performances.</p>
     </div>
 
     <table>
@@ -78,57 +78,57 @@ body {
         <!--Date-->
         <tr>
           <td>2019</td>
-          <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> What Ambient Music Means to me</a></span></td>
+          <td><span style ="background-color: white;"><a href="https://muzakarchives.com/stimulus-progression-5/"> What Ambient Music Means to me</a></span></td>
           <td>Essay describing ambient music</td>
         </tr>
 
         <!--Title-->
         <tr>
             <td>1973</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> Stimulus Progression #5</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://muzakarchives.com/stimulus-progression-5/"> Stimulus Progression #5</a></span></td>
             <td>Muzak Stimulus progression</td>
           </tr>
         
         <tr>
             <td>1984</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> Watering a flower</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://www.youtube.com/watch?v=34UutDrXV2Q"> Watering a flower</a></span></td>
             <td>The first retail music commisioned by MUJI corp in 1984</td>
         </tr>  
 
         <tr>
             <td>2019</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> Sound Spaces</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://www.archdaily.com/168979/bernhard-leitner-sound-spaces"> Sound Spaces</a></span></td>
             <td>Article exploring the sonic work of bernhard leitner</td>
         </tr>
 
         <tr>
             <td>2019</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html">The Lunar Phases of St. GIGA</a></span></td>
+            <td><span style ="background-color: white;"><a href="http://www.sothismedias.com/home/the-lunar-phases-of-st-giga">The Lunar Phases of St. GIGA</a></span></td>
             <td>Essay describing the techniques of programing for St GIGA. A Japanese ambient radio station. </td>
           </tr>
 
           <tr>
             <td>2018</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> Ocean of Sound</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://www.semcoop.com/ocean-sound-ambient-sound-and-radical-listening-age-communication"> Ocean of Sound</a></span></td>
             <td>In depth book on Ambient Music</td>
           </tr>
 
           <tr>
             <td>2022</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html">Figures in Air</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://www.inventorypress.com/product/figures-in-air">Figures in Air</a></span></td>
             <td>Book on the philosophy of audio and its cultural use</td>
           </tr>
 
           <tr>
             <td>2006</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html">Serpentinata</a></span></td>
+            <td><span style ="background-color: white;"><a href="https://www.youtube.com/watch?v=sxyVQb-VywA&t=41s">Serpentinata</a></span></td>
             <td>Sound installation of the artist bernhard leitner</td>
           </tr>
 
           <tr>
             <td>2017</td>
-            <td><span style ="background-color: white;"><a href="https://luckysoap.com/statements/handmadeweb.html"> Brian Eno on Ambient Music</a></span></td>
-            <td>Conversation with BE on the nature of ambient music and the coining of the term</td>
+            <td><span style ="background-color: white;"><a href="https://pitchfork.com/features/interview/10023-a-conversation-with-brian-eno-about-ambient-music/"> Brian Eno on Ambient Music</a></span></td>
+            <td>Conversation with Brian Eno on the nature of ambient music and the coining of the term</td>
           </tr>
       </table>
 
