updated table info

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ body {
 
         }
 
+        tr{
+            display: flex;
+            justify-content: space-between;
+        }
 
     </style>
 </head>
@@ -129,6 +133,11 @@ body {
             <td>2017</td>
             <td><span style ="background-color: white;"><a href="https://pitchfork.com/features/interview/10023-a-conversation-with-brian-eno-about-ambient-music/"> Brian Eno on Ambient Music</a></span></td>
             <td>Conversation with Brian Eno on the nature of ambient music and the coining of the term</td>
+          </tr>
+          <tr>
+            <td>2022</td>
+            <td><span style ="background-color: white;"><a href="https://insheepsclothinghifi.com/erik-satie-the-o-g-of-ambient-music/"> Erik Satie, The OG of Ambient Music</a></span></td>
+            <td>in depth article exploring Erik Satie's early compositions for spaces</td>
           </tr>
       </table>
 
